--- a/index.html
+++ b/index.html
@@ -1,100 +1,131 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hossein Rajabloo | Python & Engineering Projects</title>
+  <title>پروژه‌های حسین رجبلو</title>
   <style>
     body {
       margin: 0;
-      font-family: "Segoe UI", sans-serif;
-      background: #f4f4f4;
-      color: #333;
+      font-family: 'Tahoma', sans-serif;
+      background: #f7f7f7;
+      direction: rtl;
     }
     header {
-      background: #0a192f;
+      background-color: #d32f2f;
       color: white;
-      padding: 2rem;
-      text-align: center;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     header h1 {
-      margin-bottom: 0.5rem;
+      margin: 0;
+      font-size: 1.5rem;
     }
-    section {
+    nav a {
+      margin: 0 1rem;
+      color: white;
+      text-decoration: none;
+    }
+    .container {
       padding: 2rem;
-      max-width: 800px;
+      max-width: 1200px;
       margin: auto;
     }
-    .project {
-      background: white;
-      padding: 1rem;
-      margin: 1rem 0;
-      border-left: 5px solid #007acc;
-      box-shadow: 0 0 5px rgba(0,0,0,0.05);
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
     }
-    .project h3 {
-      margin: 0 0 0.5rem;
+    .card {
+      background: white;
+      border: 1px solid #eee;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      padding: 1rem;
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card h3 {
+      margin-top: 0;
+      color: #d32f2f;
+    }
+    .card p {
+      font-size: 0.9rem;
+      color: #555;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.5rem 1rem;
+      background: #d32f2f;
+      color: white;
+      text-decoration: none;
+      border-radius: 4px;
+      font-size: 0.9rem;
     }
     footer {
       text-align: center;
       padding: 1rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-    .social a {
-      margin: 0 1rem;
-      color: #007acc;
-      text-decoration: none;
+      background: #eee;
+      margin-top: 2rem;
+      font-size: 0.85rem;
+      color: #444;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Hossein Rajabloo</h1>
-    <p>Mechanical Engineer | Python Developer | ISI Researcher</p>
+    <h1>حسین رجبلو</h1>
+    <nav>
+      <a href="#projects">پروژه‌ها</a>
+      <a href="#about">درباره من</a>
+      <a href="#contact">تماس</a>
+    </nav>
   </header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>I’m a Mechanical Engineering graduate with a passion for Python-based simulations, machine learning in energy systems, and ISI-level research in fuel cell technologies. Currently, I work as an Automotive Instructor at the Ministry of Education in Iran.</p>
-  </section>
+  <div class="container">
+    <section id="projects">
+      <h2>پروژه‌های من</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>شبیه‌سازی راندمان موتور</h3>
+          <p>نمودار راندمان موتور نسبت به بار را رسم می‌کند. مناسب برای آموزش مهندسی.</p>
+          <a class="btn" href="#">مشاهده پروژه</a>
+        </div>
+        <div class="card">
+          <h3>پیش‌بینی مصرف سوخت (ML)</h3>
+          <p>پیش‌بینی مصرف سوخت خودرو با مدل‌های یادگیری ماشین.</p>
+          <a class="btn" href="#">مشاهده پروژه</a>
+        </div>
+        <div class="card">
+          <h3>محاسبه تلفات حرارتی لوله</h3>
+          <p>بر اساس روابط انتقال حرارت. مناسب برای تمرین مهندسی حرارت و سیالات.</p>
+          <a class="btn" href="#">مشاهده پروژه</a>
+        </div>
+      </div>
+    </section>
 
-  <section>
-    <h2>Projects</h2>
+    <section id="about" style="margin-top: 3rem;">
+      <h2>درباره من</h2>
+      <p>
+        من حسین رجبلو، فارغ‌التحصیل مهندسی مکانیک و مدرس هنرستان هستم.
+        به شبیه‌سازی، هوش مصنوعی و پروژه‌های آموزشی در حوزه انرژی علاقه‌مندم.
+      </p>
+    </section>
 
-    <div class="project">
-      <h3>🔧 Engine Efficiency Plot</h3>
-      <p>A Python tool to visualize engine load vs efficiency. Helps engineering students understand performance trends.</p>
-    </div>
-
-    <div class="project">
-      <h3>🔥 Pipe Heat Loss</h3>
-      <p>Simulates thermal loss in pipes using basic heat transfer equations. Great for thermal engineering education.</p>
-    </div>
-
-    <div class="project">
-      <h3>🤖 Fuel Efficiency Prediction</h3>
-      <p>ML-based fuel prediction tool using regression models. Includes real dataset and GUI app (Tkinter).</p>
-    </div>
-
-    <div class="project">
-      <h3>🧪 Fuel Cell Research</h3>
-      <p>Published research on hydrogen fuel cells and radiative cooling for photovoltaic systems.</p>
-    </div>
-
-  </section>
-
-  <section class="social">
-    <h2>Contact</h2>
-    <p>
-      <a href="https://www.linkedin.com/in/hossein-rajabloo" target="_blank">LinkedIn</a> |
-      <a href="mailto:hosseinrj1994@gmail.com">Email</a> |
-      <a href="https://github.com/HowsseinRj" target="_blank">GitHub</a>
-    </p>
-  </section>
+    <section id="contact" style="margin-top: 3rem;">
+      <h2>تماس با من</h2>
+      <p>📧 ایمیل: hosseinrj1994@gmail.com</p>
+      <p>🔗 <a href="https://github.com/HowsseinRj" target="_blank">گیت‌هاب من</a></p>
+    </section>
+  </div>
 
   <footer>
-    &copy; 2025 Hossein Rajabloo. All rights reserved.
+    &copy; 2025 طراحی شده توسط حسین رجبلو - تمامی حقوق محفوظ است.
   </footer>
 </body>
 </html>
