--- a/index.html
+++ b/index.html
@@ -3,129 +3,168 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>پروژه‌های حسین رجبلو</title>
+  <title>حسین رجبلو | سایت شخصی</title>
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    body {
+    :root {
+      --primary: #2c3e50;
+      --accent: #3498db;
+      --bg: #f9f9f9;
+      --dark: #111;
+    }
+    * {
       margin: 0;
-      font-family: 'Tahoma', sans-serif;
-      background: #f7f7f7;
-      direction: rtl;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Vazirmatn', sans-serif;
+    }
+    body {
+      background-color: var(--bg);
+      color: var(--primary);
+      scroll-behavior: smooth;
     }
     header {
-      background-color: #d32f2f;
-      color: white;
-      padding: 1rem 2rem;
+      background: white;
+      padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
-    header h1 {
-      margin: 0;
-      font-size: 1.5rem;
-    }
-    nav a {
+    header nav a {
       margin: 0 1rem;
-      color: white;
       text-decoration: none;
+      color: var(--primary);
+      transition: color 0.3s ease;
     }
-    .container {
-      padding: 2rem;
-      max-width: 1200px;
+    header nav a:hover {
+      color: var(--accent);
+    }
+    .hero {
+      padding: 5rem 2rem;
+      text-align: center;
+      background: linear-gradient(to left, #e3f2fd, #fff);
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.1rem;
+      color: #555;
+    }
+    section {
+      padding: 4rem 2rem;
+      max-width: 1000px;
       margin: auto;
+    }
+    .section-title {
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      text-align: center;
+      position: relative;
+    }
+    .section-title::after {
+      content: '';
+      display: block;
+      width: 60px;
+      height: 4px;
+      background: var(--accent);
+      margin: 10px auto 0;
     }
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
+      gap: 2rem;
+      margin-top: 2rem;
     }
     .card {
       background: white;
-      border: 1px solid #eee;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
       padding: 1rem;
-      transition: transform 0.3s ease;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .card:hover {
       transform: translateY(-5px);
+      box-shadow: 0 5px 20px rgba(0,0,0,0.1);
     }
-    .card h3 {
-      margin-top: 0;
-      color: #d32f2f;
-    }
-    .card p {
+    footer {
+      background: #eee;
+      text-align: center;
+      padding: 2rem;
       font-size: 0.9rem;
       color: #555;
     }
-    .btn {
-      display: inline-block;
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background: #d32f2f;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-      font-size: 0.9rem;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #eee;
-      margin-top: 2rem;
-      font-size: 0.85rem;
-      color: #444;
+    @media screen and (max-width: 600px) {
+      .hero h1 { font-size: 2rem; }
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>حسین رجبلو</h1>
+    <div>🧠 حسین رجبلو</div>
     <nav>
+      <a href="#about">درباره</a>
       <a href="#projects">پروژه‌ها</a>
-      <a href="#about">درباره من</a>
+      <a href="#blog">نوشته‌ها</a>
+      <a href="#cv">رزومه</a>
       <a href="#contact">تماس</a>
     </nav>
   </header>
 
-  <div class="container">
-    <section id="projects">
-      <h2>پروژه‌های من</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>شبیه‌سازی راندمان موتور</h3>
-          <p>نمودار راندمان موتور نسبت به بار را رسم می‌کند. مناسب برای آموزش مهندسی.</p>
-          <a class="btn" href="#">مشاهده پروژه</a>
-        </div>
-        <div class="card">
-          <h3>پیش‌بینی مصرف سوخت (ML)</h3>
-          <p>پیش‌بینی مصرف سوخت خودرو با مدل‌های یادگیری ماشین.</p>
-          <a class="btn" href="#">مشاهده پروژه</a>
-        </div>
-        <div class="card">
-          <h3>محاسبه تلفات حرارتی لوله</h3>
-          <p>بر اساس روابط انتقال حرارت. مناسب برای تمرین مهندسی حرارت و سیالات.</p>
-          <a class="btn" href="#">مشاهده پروژه</a>
-        </div>
-      </div>
-    </section>
-
-    <section id="about" style="margin-top: 3rem;">
-      <h2>درباره من</h2>
-      <p>
-        من حسین رجبلو، فارغ‌التحصیل مهندسی مکانیک و مدرس هنرستان هستم.
-        به شبیه‌سازی، هوش مصنوعی و پروژه‌های آموزشی در حوزه انرژی علاقه‌مندم.
-      </p>
-    </section>
-
-    <section id="contact" style="margin-top: 3rem;">
-      <h2>تماس با من</h2>
-      <p>📧 ایمیل: hosseinrj1994@gmail.com</p>
-      <p>🔗 <a href="https://github.com/HowsseinRj" target="_blank">گیت‌هاب من</a></p>
-    </section>
+  <div class="hero">
+    <h1>سلام، من حسینم 👋</h1>
+    <p>پژوهشگر، برنامه‌نویس و مدرس فنی حرفه‌ای | علاقمند به شبیه‌سازی و هوش مصنوعی</p>
   </div>
 
+  <section id="about">
+    <h2 class="section-title">درباره من</h2>
+    <p style="text-align:center; max-width:600px; margin:auto;">
+      من فارغ‌التحصیل مهندسی مکانیک و مدرس سازمان آموزش و پرورش ایران هستم. در زمینه شبیه‌سازی، پروژه‌های علمی، و هوش مصنوعی فعالیت می‌کنم و هدفم آموزش و خلق ابزارهای نوآورانه برای یادگیری بهتر مهندسیه.
+    </p>
+  </section>
+
+  <section id="projects">
+    <h2 class="section-title">پروژه‌ها</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>📊 شبیه‌سازی راندمان موتور</h3>
+        <p>نمودار راندمان موتور بر حسب بار با پایتون و matplotlib</p>
+      </div>
+      <div class="card">
+        <h3>🧠 پیش‌بینی مصرف سوخت با ML</h3>
+        <p>مدل یادگیری ماشین برای پیش‌بینی MPG خودرو با داده واقعی</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="blog">
+    <h2 class="section-title">نوشته‌ها</h2>
+    <p style="text-align:center">در حال نگارش مقالات تخصصی در زمینه فناوری‌های نوین خودرو و خنک‌سازی تابشی هستم...</p>
+  </section>
+
+  <section id="cv">
+    <h2 class="section-title">رزومه</h2>
+    <p style="text-align:center">
+      📄 <a href="#">مشاهده رزومه کامل من</a>
+    </p>
+  </section>
+
+  <section id="contact">
+    <h2 class="section-title">تماس با من</h2>
+    <p style="text-align:center">
+      📧 ایمیل: hosseinrj1994@gmail.com<br>
+      🔗 <a href="https://github.com/HowsseinRj">گیت‌هاب</a> | <a href="https://linkedin.com/in/hossein-rajabloo">لینکدین</a>
+    </p>
+  </section>
+
   <footer>
-    &copy; 2025 طراحی شده توسط حسین رجبلو - تمامی حقوق محفوظ است.
+    طراحی شده با ❤️ توسط حسین رجبلو | 2025
   </footer>
 </body>
 </html>
