--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>حسین رجبلو | سایت شخصی</title>
+  <title>Hossein Rajabloo | Portfolio Website</title>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
@@ -12,6 +12,7 @@
       --accent: #3498db;
       --bg: #f9f9f9;
       --dark: #111;
+      --transition: all 0.3s ease;
     }
     * {
       margin: 0;
@@ -23,6 +24,7 @@
       background-color: var(--bg);
       color: var(--primary);
       scroll-behavior: smooth;
+      transition: var(--transition);
     }
     header {
       background: white;
@@ -39,9 +41,14 @@
       margin: 0 1rem;
       text-decoration: none;
       color: var(--primary);
-      transition: color 0.3s ease;
+      transition: var(--transition);
     }
     header nav a:hover {
+      color: var(--accent);
+    }
+    .language-switch {
+      cursor: pointer;
+      font-size: 0.9rem;
       color: var(--accent);
     }
     .hero {
@@ -87,7 +94,7 @@
       padding: 1rem;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.06);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      transition: var(--transition);
     }
     .card:hover {
       transform: translateY(-5px);
@@ -104,67 +111,93 @@
       .hero h1 { font-size: 2rem; }
     }
   </style>
+  <script>
+    function switchLanguage(lang) {
+      document.body.setAttribute("lang", lang);
+      document.body.setAttribute("dir", lang === 'fa' ? 'rtl' : 'ltr');
+      const elements = document.querySelectorAll('[data-en], [data-fa]');
+      elements.forEach(el => {
+        el.innerText = lang === 'fa' ? el.getAttribute('data-fa') : el.getAttribute('data-en');
+      });
+    }
+  </script>
 </head>
-<body>
+<body lang="en">
   <header>
-    <div>🧠 حسین رجبلو</div>
+    <div data-en="Hossein Rajabloo" data-fa="حسین رجبلو">Hossein Rajabloo</div>
     <nav>
-      <a href="#about">درباره</a>
-      <a href="#projects">پروژه‌ها</a>
-      <a href="#blog">نوشته‌ها</a>
-      <a href="#cv">رزومه</a>
-      <a href="#contact">تماس</a>
+      <a href="#about" data-en="About" data-fa="درباره">About</a>
+      <a href="#projects" data-en="Projects" data-fa="پروژه‌ها">Projects</a>
+      <a href="#blog" data-en="Blog" data-fa="نوشته‌ها">Blog</a>
+      <a href="#cv" data-en="CV" data-fa="رزومه">CV</a>
+      <a href="#contact" data-en="Contact" data-fa="تماس">Contact</a>
+      <span class="language-switch" onclick="switchLanguage('en')">EN</span> |
+      <span class="language-switch" onclick="switchLanguage('fa')">FA</span>
     </nav>
   </header>
 
   <div class="hero">
-    <h1>سلام، من حسینم 👋</h1>
-    <p>پژوهشگر، برنامه‌نویس و مدرس فنی حرفه‌ای | علاقمند به شبیه‌سازی و هوش مصنوعی</p>
+    <h1 data-en="Hi, I'm Hossein 👋" data-fa="سلام، من حسینم 👋">Hi, I'm Hossein 👋</h1>
+    <p data-en="Researcher, Developer & Educator | Passionate about Simulation, Python, and AI"
+       data-fa="پژوهشگر، برنامه‌نویس و مدرس | علاقمند به شبیه‌سازی، پایتون و هوش مصنوعی">
+       Researcher, Developer & Educator | Passionate about Simulation, Python, and AI
+    </p>
   </div>
 
   <section id="about">
-    <h2 class="section-title">درباره من</h2>
-    <p style="text-align:center; max-width:600px; margin:auto;">
-      من فارغ‌التحصیل مهندسی مکانیک و مدرس سازمان آموزش و پرورش ایران هستم. در زمینه شبیه‌سازی، پروژه‌های علمی، و هوش مصنوعی فعالیت می‌کنم و هدفم آموزش و خلق ابزارهای نوآورانه برای یادگیری بهتر مهندسیه.
+    <h2 class="section-title" data-en="About Me" data-fa="درباره من">About Me</h2>
+    <p style="text-align:center; max-width:600px; margin:auto;" data-en="I'm a Mechanical Engineer and Vocational Instructor based in Iran. I specialize in simulation projects, scientific coding, and educational tools for students in mechanical engineering."
+       data-fa="من مهندس مکانیک و مدرس هنرستان در ایران هستم. تخصص من در پروژه‌های شبیه‌سازی، برنامه‌نویسی علمی، و تولید ابزارهای آموزشی برای دانشجویان مهندسی مکانیک است.">
+      I'm a Mechanical Engineer and Vocational Instructor based in Iran...
     </p>
   </section>
 
   <section id="projects">
-    <h2 class="section-title">پروژه‌ها</h2>
+    <h2 class="section-title" data-en="Projects" data-fa="پروژه‌ها">Projects</h2>
     <div class="grid">
       <div class="card">
-        <h3>📊 شبیه‌سازی راندمان موتور</h3>
-        <p>نمودار راندمان موتور بر حسب بار با پایتون و matplotlib</p>
+        <h3>⚙️ Engine Efficiency Plot</h3>
+        <p>Plots mechanical efficiency of engines based on load using matplotlib</p>
       </div>
       <div class="card">
-        <h3>🧠 پیش‌بینی مصرف سوخت با ML</h3>
-        <p>مدل یادگیری ماشین برای پیش‌بینی MPG خودرو با داده واقعی</p>
+        <h3>🧠 Fuel Efficiency ML</h3>
+        <p>ML model to predict vehicle MPG using regression and real-world data</p>
+      </div>
+      <div class="card">
+        <h3>🖥️ GUI Fuel Predictor</h3>
+        <p>Tkinter-based desktop app to enter specs and get real-time predictions</p>
       </div>
     </div>
   </section>
 
   <section id="blog">
-    <h2 class="section-title">نوشته‌ها</h2>
-    <p style="text-align:center">در حال نگارش مقالات تخصصی در زمینه فناوری‌های نوین خودرو و خنک‌سازی تابشی هستم...</p>
+    <h2 class="section-title" data-en="Blog & Publications" data-fa="نوشته‌ها">Blog & Publications</h2>
+    <p style="text-align:center">
+      Published in Civilica: Hydrogen Fuel Cell Challenges in Automotive Development<br>
+      Under review at Elsevier: Biomimetic Radiative Cooling for PV Efficiency
+    </p>
   </section>
 
   <section id="cv">
-    <h2 class="section-title">رزومه</h2>
+    <h2 class="section-title" data-en="Curriculum Vitae" data-fa="رزومه">Curriculum Vitae</h2>
     <p style="text-align:center">
-      📄 <a href="#">مشاهده رزومه کامل من</a>
+      🎓 B.Sc. in Mechanical Engineering<br>
+      🧪 ISI Researcher – Hydrogen & Cooling Films<br>
+      🧰 Python, ML, SolidWorks, ANSYS<br>
+      📄 <a href="#">Download CV</a>
     </p>
   </section>
 
   <section id="contact">
-    <h2 class="section-title">تماس با من</h2>
+    <h2 class="section-title" data-en="Contact Me" data-fa="تماس با من">Contact Me</h2>
     <p style="text-align:center">
-      📧 ایمیل: hosseinrj1994@gmail.com<br>
-      🔗 <a href="https://github.com/HowsseinRj">گیت‌هاب</a> | <a href="https://linkedin.com/in/hossein-rajabloo">لینکدین</a>
+      📧 hosseinrj1994@gmail.com<br>
+      🔗 <a href="https://github.com/HowsseinRj">GitHub</a> | <a href="https://linkedin.com/in/hossein-rajabloo">LinkedIn</a>
     </p>
   </section>
 
   <footer>
-    طراحی شده با ❤️ توسط حسین رجبلو | 2025
+    Designed with ❤️ by Hossein Rajabloo | 2025
   </footer>
 </body>
 </html>
